XX Dec 2005: 0.0.4 Miek <miek@miek.nl>
   * -n daysago is implemented in yesterday.sh and hist.sh
   * Ran 'rats':
   - take care getopts is not hit by a buffer overrun. Also
     removed potential race.
   * Added remote directory with a script that can be piped
     to 'sftp b - user@remotehost'. This is a poor mans rsync - fully
     working though.
   * Added explicit timestamp file as suggest by Boris Goldowsky 
     (-N FILE, where the m_time of FILE is taken is the filestamp)

28 Dec 2005: 0.0.3 Miek <miek@miek.nl>
   * Reworked the source directory slighty, all mirror scripts
     are now in their own directory (mirror/)
   * Lots of documentation updates


26 Dec 2005: 0.0.2 Miek <miek@miek.nl>
   * Renamed to rdup.
   * rdup now uses GTree * instead of GSList *, making
     to incremental dump 100 times faster. 
   * make install target was added. /etc/rdup is the configuration
     directory of rdup
   * I'm now using rdup to backup my homesystem


25 Dec 2005: 0.0.1 Miek <miek@miek.nl>
   - First public release -
   * Fully working, but not all features implemented
   * Fully documented.
   * The supplied shell script implement one possible
     backup scheme. Feel free to add more
   * Look at the TODO for what needs to be done